--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "precommit": "yarn format && yarn lint"
   },
+  "pre-commit": [
+    "precommit"
+  ],
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "pre-commit": "^1.2.2",
     "prettier": "3.5.3",
     "vite": "^6.2.0"
   }
