--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "precommit"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
