--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "latest",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
